fix: remove list dots for lang-switcher on mobile

--- a/assets/sass/components/_lang-switcher.sass
+++ b/assets/sass/components/_lang-switcher.sass
@@ -3,6 +3,7 @@
   align-items: center
   margin-left: -10px
   margin-right: -10px
+  list-style: none
   .lang-item
     list-style: none
     opacity: 0.5
@@ -25,14 +26,7 @@
     text-align: center
     +max-screen($breakpoint-xxl)
       +adaptive-value('font-size', 20, 16, 1)
-    // &:hover
-    //   color: rgba($color-dark, 0.6)
 
     option
       transition: 0.2s ease
       cursor: pointer
-
-      // &:hover
-      //   background-color: $color-grey !important
-      //   color: $color-light !important
-      
